Initial commit – Astro portfolio with blogs

--- a/src/pages/tags/[tag]/[...page].astro
+++ b/src/pages/tags/[tag]/[...page].astro
@@ -40,7 +40,17 @@ const { page, tagName } = Astro.props;
   >
     <h1 slot="title" transition:name={tag}>{`Tag:${tag}`}</h1>
     <ul>
-      {page.data.map(data => <Card {...data} />)}
+      {page.data.map(({ id, data }) => (
+  <Card
+    slug={id}
+    title={data.title}
+    description={data.description}
+    pubDate={data.pubDatetime.toISOString()}
+    tags={data.tags}
+  />
+))}
+
+
     </ul>
   </Main>
 
