--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,7 +20,13 @@ const { noMarginTop = false } = Astro.props;
     <div class="my-2 flex flex-col items-center whitespace-nowrap sm:flex-row">
       <span>Copyright &#169; {currentYear}</span>
       <span class="hidden sm:inline">&nbsp;|&nbsp;</span>
-      <span>All rights reserved.</span>
+      <span>All rights reserved</span>
+      <span class="hidden sm:inline">&nbsp;|&nbsp;</span>
+       By-
+      <a href="/human.txt" target="_blank" class="underline hover:text-primary">HARSH ❤️</a>
+    </div>
+    <div class="mt-1 text-sm text-gray-500">
+     
     </div>
   </div>
 </footer>
