--- a/src/pages/tags/[tag]/[...page].astro
+++ b/src/pages/tags/[tag]/[...page].astro
@@ -40,15 +40,10 @@ const { page, tagName } = Astro.props;
   >
     <h1 slot="title" transition:name={tag}>{`Tag:${tag}`}</h1>
     <ul>
-      {page.data.map(({ id, data }) => (
-  <Card
-    slug={id}
-    title={data.title}
-    description={data.description}
-    pubDate={data.pubDatetime.toISOString()}
-    tags={data.tags}
-  />
+      {page.data.map(post => (
+  <Card {...post} />
 ))}
+
 
 
     </ul>
