--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -32,7 +32,7 @@ const isActive = (path: string) => {
       <!-- 🔹 Site Title (Top-Left) -->
       <a
         href="/"
-        class="absolute py-1 text-2xl font-semibold whitespace-nowrap sm:static sm:my-auto sm:text-4xl"
+        class="absolute py-1 text-xl font-semibold whitespace-nowrap sm:static sm:my-auto sm:text-3xl"
       >
         Harsh Singh
       </a>
@@ -62,7 +62,7 @@ const isActive = (path: string) => {
           <li><a href="/resume" class:list={{ "active-nav": isActive("/resume") }}>Resume</a></li>
           <li><a href="/posts" class:list={{ "active-nav": isActive("/posts") }}>Blog</a></li>
           <li><a href="/tags" class:list={{ "active-nav": isActive("/tags") }}>Tags</a></li>
-          
+         
           {
             SITE.lightAndDarkMode && (
               <li class="col-span-2 flex justify-center sm:col-span-1 sm:justify-start">
